[gd_scene load_steps=10 format=3 uid="uid://bgnh4af87pgi2"]

[ext_resource type="Script" uid="uid://bm7kn8cgsy3br" path="res://enemy/enemy.gd" id="1_jwmku"]
[ext_resource type="Script" uid="uid://dxj8qrg4j1hio" path="res://enemy/enemy_state_manager.gd" id="2_i531w"]
[ext_resource type="Script" uid="uid://jqadv650vbp1" path="res://enemy/enemies/Spirit_blade/states/wander_state.gd" id="3_kidv1"]
[ext_resource type="Script" uid="uid://bpe3wg8tiq4cq" path="res://enemy/enemies/Spirit_blade/states/chase_state.gd" id="4_mcgxg"]
[ext_resource type="Script" uid="uid://dsltu5hqco1ln" path="res://enemy/enemies/Spirit_blade/states/charge_state.gd" id="5_2t328"]
[ext_resource type="Script" uid="uid://du1oai83nge5w" path="res://enemy/enemies/Spirit_blade/states/launch_state.gd" id="6_hgo3a"]
[ext_resource type="Texture2D" uid="uid://dxkds0tufkbmy" path="res://enemy/enemies/Spirit_blade/spirit_blade.png" id="7_4e5r2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wwi1j"]
size = Vector2(22, 47)

[sub_resource type="CircleShape2D" id="CircleShape2D_16am5"]
radius = 120.0

[node name="SpiritBlade" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_jwmku")
movement_speed = 45.0

[node name="StateManager" type="Node" parent="." node_paths=PackedStringArray("enemy", "active_state")]
script = ExtResource("2_i531w")
enemy = NodePath("..")
active_state = NodePath("WanderState")

[node name="WanderState" type="Node" parent="StateManager" node_paths=PackedStringArray("wall_ray", "chase_state", "enemy", "state_manager")]
script = ExtResource("3_kidv1")
wall_ray = NodePath("../../WallRay")
chase_state = NodePath("../ChaseState")
enemy = NodePath("../..")
state_manager = NodePath("..")

[node name="ChaseState" type="Node" parent="StateManager" node_paths=PackedStringArray("charge_state", "enemy", "state_manager")]
script = ExtResource("4_mcgxg")
distance_to_attack = 100.0
chase_speed = 95.0
charge_state = NodePath("../ChargeState")
enemy = NodePath("../..")
state_manager = NodePath("..")
metadata/_custom_type_script = "uid://d3dsllt0af854"

[node name="ChargeState" type="Node" parent="StateManager" node_paths=PackedStringArray("launch_state", "enemy", "state_manager")]
script = ExtResource("5_2t328")
charge_time = 2.5
launch_state = NodePath("../LaunchState")
enemy = NodePath("../..")
state_manager = NodePath("..")
metadata/_custom_type_script = "uid://d3dsllt0af854"

[node name="ChargeTimer" type="Timer" parent="StateManager/ChargeState"]

[node name="LaunchTimer" type="Timer" parent="StateManager/ChargeState"]

[node name="LaunchState" type="Node" parent="StateManager" node_paths=PackedStringArray("chase_state", "enemy", "state_manager")]
script = ExtResource("6_hgo3a")
launch_speed = 250.0
max_distance = 250.0
chase_state = NodePath("../ChaseState")
enemy = NodePath("../..")
state_manager = NodePath("..")
metadata/_custom_type_script = "uid://d3dsllt0af854"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("7_4e5r2")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_wwi1j")

[node name="Hurtbox" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -38, -20, -25, -20, 32, 0, 38, 20, 32, 20, -25)

[node name="AggroRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="AggroRadius" type="CollisionShape2D" parent="AggroRadius"]
shape = SubResource("CircleShape2D_16am5")

[node name="WallRay" type="RayCast2D" parent="."]
target_position = Vector2(45, 0)

[connection signal="timeout" from="StateManager/ChargeState/LaunchTimer" to="StateManager/ChargeState" method="_on_launch_timer_timeout"]
[connection signal="body_entered" from="AggroRadius" to="StateManager/WanderState" method="_on_aggro_radius_body_entered"]
